# mplayer

./: Cargo.toml  README.md  \  flake.nix
src/: main.rs
src/api/: mod.rs
src/api/download/: bandcamp_downloader.rs  download_pool.rs  file_sorter.rs  mod.rs  musify_downloader.rs
src/api/fs/: mod.rs
src/api/player/: mod.rs
src/api/search/: mod.rs  remote.rs  wrapper.rs
src/ui/: components.rs  helpers.rs  input.rs  interface.rs  layout.rs  mod.rs  scroll_components.rs
