[package]
name = "mplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
musicbrainz_rs = "0.5.0"
reqwest = "0.11.14"
tokio = {version = "1.26.0", features = ["full"]}
tui = "0.19.0"
chrono = "0.4.24"
serde = "1.0.158"
regex = "1.7.2"
async-trait = "0.1.67"
threadpool = "1.8.1"
audiotags = "0.4.1"
dirs = "5.0.0"
dyn-clone = "1.0.11"
mp3-duration = "0.1.10"
