[package]
name = "mplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tokio = {version = "1.26.0", features = ["full"]}
tui = {package = "ratatui", version = "0.20.1"}
chrono = "0.4.24"
serde = {version = "1.0.158", features = ["derive"]}
regex = "1.7.2"
async-trait = "0.1.67"
threadpool = "1.8.1"
audiotags = "0.4.1"
dirs = "5.0.0"
dyn-clone = "1.0.11"
mp3-duration = "0.1.10"
rodio = "0.17.3"
gjson = "0.8.1"
markup5ever = "0.11.0"
string_cache = "0.8.4"
itertools = "0.10.5"
serde_json = "1.0.103"
infer = "0.16.0"
