[package]
name = "mplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
tokio = {version = "1.38.0", features = ["full"]}
chrono = "0.4.38"
serde = {version = "1.0.203", features = ["derive"]}
regex = "1.10.5"
async-trait = "0.1.80"
threadpool = "1.8.1"
audiotags = "0.5.0"
dirs = "5.0.1"
dyn-clone = "1.0.17"
mp3-duration = "0.1.10"
rodio = "0.19.0"
gjson = "0.8.1"
markup5ever = "0.12.1"
string_cache = "0.8.7"
itertools = "0.13.0"
serde_json = "1.0.120"
infer = "0.16.0"
ratatui = "0.27.0"
